syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

service ProductService {
    rpc FindProductItem(FindProductItemRequest) returns (FindProductItemResponse){};
}


message FindProductItemRequest{
    uint64 product_id = 1;
}
message FindProductItemResponse{
    uint64 id = 1;
    string name = 2;
    double price = 3;
    uint64 qty_in_stock = 4;
    string sku = 5;
    uint64 discount_price = 6;
    string variation_value = 7;
}